# rust_and_dust

./: .gitignore  Cargo.toml  README.md  credits.txt  license.txt
.github/workflows/: rust.yml  rust_ubuntu.yml  rust_windows.yml
resources/creatures/: creatures.csv  projectiles.csv
resources/gfx/grounds/: catalog.xml  map_objects.tica
resources/gfx/items/: catalog.xml  items.tica
resources/gfx/objects/: catalog.xml  map_objects.tica
resources/items/: .~lock.items.csv#  items.csv  modifiers.csv  plugins.csv
resources/maps/: test.map  town.map
src/: animation.rs  creature.rs  editor.rs  game.rs  gl_support.rs  inventory.rs  inventory_view.rs  item.rs  main.rs  map.rs  mob_group.rs  particle_driver.rs  player_inventory_view.rs  projectile.rs  rng_source.rs  shop.rs  sound.rs  voxel_image_generator.rs
src/dungeon/: mod.rs
src/gfx/: color_gradient.rs  gl_support.rs  mod.rs  voxel.rs
src/ui/: color.rs  font.rs  mod.rs  tileset.rs
src/views/: inventory_view.rs  mod.rs  player_items_view.rs  shop_view.rs  voxel_display_test.rs
