[package]
name = "rust_and_dust_collector"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.image]
version = "0.25"
default-features = false
features = ["png", "jpeg"]

[dependencies]
rodio = "0.20"
freetype-rs = "0.36"
vecmath = "1.0"
rand = "0.9"
glium = "0.36"
glutin = "0.32"
geo = "0.30"

